--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,3 +18,10 @@ steps:
 - script: |
     npm install
   displayName: 'npm install and build'
+
+- task:
+- task: AzureStaticWebApp@0
+  inputs:
+    app_location: '/'
+    skip_app_build: true
+    azure_static_web_apps_api_token: $(AZURE_STATIC_WEB_APPS_API_TOKEN_BRAVE_FIELD_09FAE9C0F)
