--- a/public/config.json
+++ b/public/config.json
@@ -2,115 +2,113 @@
   "key": "4f75ab38-936f-48bf-b311-17d7910b0edf",
   "workflowApiVersion": "1.1",
   "metaData": {
-    "icon": "images/icon.png",
-    "iconSmall": "images/iconSmall.png",
-    "category": "message"
+      "icon": "images/icon.png",
+      "iconSmall": "images/iconSmall.png",
+      "category": "message"
   },
   "type": "REST",
   "lang": {
-    "en-US": {
-      "name": "Atom Whats",
-      "description": "A Template para enviar whats",
-      "step1Label": "Configure Activity"
-    }
+      "en-US": {
+          "name": "Atom Whats",
+        "description": "A Template para enviar whats",
+        "step1Label": "Configure Activity"
+      }
   },
   "arguments": {
-    "execute": {
-      "inArguments": [
-        {
-          "emailAddress": "{{InteractionDefaults.Email}}"
-        },
-        {
-          "phoneNumber": "{{Contact.Attribute.OPORTUNIDAD.PersonMobilePhone}}"
-        },
-        {
-          "clientName": "{{Contact.Attribute.OPORTUNIDAD.Nombre}}"
-        },
-        {
-          "templateId": "X1Mva7L7EVd06JeaeF8A"
-        }
-      ],
-      "outArguments": [],
-      "url": "https://sndwhatsappmsg.grupopurdy.com/journeybuilder/execute",
-      "verb": "POST",
-      "body": "",
-      "header": "",
-      "format": "json",
-      "useJwt": true,
-      "timeout": 10000
-    }
+      "execute": {
+         "inArguments":[
+          {
+            "emailAddress": "{{InteractionDefaults.Email}}"
+          },
+          {
+            "phoneNumber": "{{Contact.Attribute.DATA_PRUEBA_NUEVOS_USER.Telefono_celular}}"
+          }
+          ,
+          {
+            "clientName": "{{Contact.Attribute.DATA_PRUEBA_NUEVOS_USER.Nombre_completo}}"
+          },
+          {
+            "templateId": "X1Mva7L7EVd06JeaeF8A"
+          }
+         ],
+        "outArguments": [],
+        "url": "https://apitestatom-0c75084e7641.herokuapp.com/journeybuilder/execute",
+         "verb": "POST",
+          "body": "",
+          "header": "",
+          "format": "json",
+          "useJwt": true,
+          "timeout": 10000
+      }
   },
   "configurationArguments": {
-    "applicationExtensionKey": "4f75ab38-936f-48bf-b311-17d7910b0edf",
+      "applicationExtensionKey": "4f75ab38-936f-48bf-b311-17d7910b0edf",
     "save": {
-      "url": "https://sndwhatsappmsg.grupopurdy.com/journeybuilder/save",
-      "verb": "POST",
+      "url": "https://apitestatom-0c75084e7641.herokuapp.com/journeybuilder/save",
+        "verb": "POST",
       "useJwt": true
-    },
-    "publish": {
-      "url": "https://sndwhatsappmsg.grupopurdy.com/journeybuilder/publish",
-      "verb": "POST",
+     },
+     "publish": {
+      "url": "https://apitestatom-0c75084e7641.herokuapp.com/journeybuilder/publish",
+         "verb": "POST",
       "useJwt": true
-    },
+     },
     "stop": {
-      "url": "https://sndwhatsappmsg.grupopurdy.com/journeybuilder/stop",
-      "verb": "POST",
+      "url": "https://apitestatom-0c75084e7641.herokuapp.com/journeybuilder/stop",
+         "verb": "POST",
       "useJwt": true
     },
     "validate": {
-      "url": "https://sndwhatsappmsg.grupopurdy.com/journeybuilder/validate",
+      "url": "https://apitestatom-0c75084e7641.herokuapp.com/journeybuilder/validate",
       "verb": "POST",
       "useJwt": true
     }
   },
   "wizardSteps": [
-    {
-      "label": "Configure Activity",
-      "key": "step1"
-    }
+      { "label": "Configure Activity", "key": "step1" }
   ],
   "userInterfaces": {
-    "configModal": {
-      "height": 400,
-      "width": 1000,
-      "fullscreen": false
-    }
+      "configModal": {
+          "height": 400,
+          "width": 1000,
+        "fullscreen": false
+      }
   },
   "schema": {
-    "arguments": {
-      "execute": {
-        "inArguments": [
-          {
-            "phoneNumber": {
-              "dataType": "Phone",
-              "isNullable": false,
-              "direction": "in"
-            }
-          },
-          {
-            "emailAddress": {
-              "dataType": "Email",
-              "isNullable": false,
-              "direction": "in"
-            }
-          },
-          {
-            "clientName": {
-              "dataType": "Text",
-              "isNullable": false,
-              "direction": "in"
-            }
-          },
-          {
-            "templateId": {
-              "dataType": "Text",
-              "isNullable": false,
-              "direction": "in"
-            }
+      "arguments": {
+          "execute": {
+              "inArguments": [
+                {
+                  "phoneNumber": {
+                    "dataType": "Phone",
+                    "isNullable": false,
+                    "direction": "in"
+                  }
+                },
+                {
+                  "emailAddress": {
+                    "dataType": "Email",
+                    "isNullable": false,
+                    "direction": "in"
+                  }
+                },
+                {
+                  "clientName": {
+                    "dataType": "Text",
+                    "isNullable": false,
+                    "direction": "in"
+                  }
+                },
+                {
+                  "templateId": {
+                    "dataType": "Text",
+                    "isNullable": false,
+                    "direction": "in"
+                  }
+                }
+              ],
+              "outArguments": []
           }
-        ],
-        "outArguments": []
       }
-    }
   }
 }
