Actualizacion hhp en execute

--- a/public/config.json
+++ b/public/config.json
@@ -32,7 +32,7 @@
           }
          ],
         "outArguments": [],
-        "url": "https://sndwhatsappmsg.grupopurdy.com/journeybuilder/execute",
+        "url": "https://miriam-desarrollo-wa-7814f5dea421.herokuapp.com/journeybuilder/execute",
          "verb": "POST",
           "body": "",
           "header": "",
